updated file name

--- a/03_codes/crm_data_prep.ipynb
+++ b/03_codes/crm_data_prep.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +49,28 @@
     "import xlrd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "# import sys\n",
+    "import time\n",
+    "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1618246692.1546843\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "print(start_time)"
    ]
   },
   {
@@ -779,7 +798,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "execution_time = time.time() -start_time\n",
+    "print(total_time)"
+   ]
   }
  ]
 }
