--- a/03_codes/crm_data_eda.ipynb
+++ b/03_codes/crm_data_eda.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>age_in_days</th>\n      <th>next_reach_out_date</th>\n      <th>number_of_outlets</th>\n      <th>created_at_len</th>\n      <th>created_at_2_len</th>\n      <th>updated_at_len</th>\n      <th>updated_at_2_len</th>\n      <th>next_reach_out_date_len</th>\n      <th>next_reach_out_date_2_len</th>\n      <th>created_at_2_year</th>\n      <th>created_at_2_month</th>\n      <th>created_at_2_day</th>\n      <th>updated_at_2_year</th>\n      <th>updated_at_2_month</th>\n      <th>updated_at_2_day</th>\n      <th>next_reach_out_date_2_year</th>\n      <th>next_reach_out_date_2_month</th>\n      <th>next_reach_out_date_2_day</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>5.863000e+03</td>\n      <td>5863.000000</td>\n      <td>185.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.0</td>\n      <td>5863.000000</td>\n      <td>5863.0</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.00000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>185.000000</td>\n      <td>185.000000</td>\n      <td>185.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>2.003714e+09</td>\n      <td>350.491557</td>\n      <td>44355.108108</td>\n      <td>104.600887</td>\n      <td>16.457957</td>\n      <td>19.0</td>\n      <td>16.413781</td>\n      <td>19.0</td>\n      <td>3.126215</td>\n      <td>3.220877</td>\n      <td>2019.190517</td>\n      <td>7.542555</td>\n      <td>15.227870</td>\n      <td>2020.37080</td>\n      <td>5.477912</td>\n      <td>13.761044</td>\n      <td>2021.016216</td>\n      <td>5.600000</td>\n      <td>14.400000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1.024682e+06</td>\n      <td>329.953288</td>\n      <td>88.841941</td>\n      <td>7416.533507</td>\n      <td>1.846802</td>\n      <td>0.0</td>\n      <td>1.884781</td>\n      <td>0.0</td>\n      <td>0.699295</td>\n      <td>1.223767</td>\n      <td>0.880839</td>\n      <td>3.816213</td>\n      <td>9.408011</td>\n      <td>0.63044</td>\n      <td>3.999038</td>\n      <td>7.700689</td>\n      <td>0.126649</td>\n      <td>2.592212</td>\n      <td>7.676333</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>2.001614e+09</td>\n      <td>-1192.000000</td>\n      <td>44209.000000</td>\n      <td>1.000000</td>\n      <td>13.000000</td>\n      <td>19.0</td>\n      <td>13.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2017.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>2018.00000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>2021.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>2.002778e+09</td>\n      <td>91.500000</td>\n      <td>44293.000000</td>\n      <td>1.000000</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2018.000000</td>\n      <td>4.000000</td>\n      <td>7.000000</td>\n      <td>2020.00000</td>\n      <td>2.000000</td>\n      <td>9.000000</td>\n      <td>2021.000000</td>\n      <td>4.000000</td>\n      <td>8.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2.003950e+09</td>\n      <td>248.000000</td>\n      <td>44328.000000</td>\n      <td>3.000000</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2019.000000</td>\n      <td>8.000000</td>\n      <td>15.000000</td>\n      <td>2020.00000</td>\n      <td>3.000000</td>\n      <td>14.000000</td>\n      <td>2021.000000</td>\n      <td>5.000000</td>\n      <td>13.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>2.004686e+09</td>\n      <td>509.000000</td>\n      <td>44419.000000</td>\n      <td>8.000000</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>18.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2020.000000</td>\n      <td>11.000000</td>\n      <td>24.000000</td>\n      <td>2021.00000</td>\n      <td>9.000000</td>\n      <td>18.000000</td>\n      <td>2021.000000</td>\n      <td>8.000000</td>\n      <td>20.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>2.005079e+09</td>\n      <td>1173.000000</td>\n      <td>44882.000000</td>\n      <td>567890.000000</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>7.000000</td>\n      <td>10.000000</td>\n      <td>2021.000000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n      <td>2021.00000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n      <td>2022.000000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 61
     }
    ],
    "source": [
@@ -258,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Execution Time: 9.137824535369873 secs\n"
+      "Execution Time: 11.6983802318573 secs\n"
      ]
     }
    ],
@@ -281,6 +281,17 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorical Variables\r\n",
+    "df.loc[df.source_of_the_deal.isna(), \"source_of_the_deal\"] = \"UNKNOWN\"\r\n",
+    "df.loc[df.head_office_city.isna(), \"head_office_city\"] = \"UNKNOWN\""
+   ]
   },
   {
    "source": [
