--- a/03_codes/crm_data_eda.ipynb
+++ b/03_codes/crm_data_eda.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# User Input\n",
     "file_path = r\"C:\\Users\\dhruv\\Documents\\UrbanPiper\\sales-crm-analysis\\02_data\" \n",
-    "file_name = \"crm_data.csv\"\n"
+    "crm_file_name = \"crm_data.csv\"\n",
+    "deal_stage_mapping = \"deal_stage_mapping.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,17 +123,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Data\n",
-    "df = pd.read_csv(file_name)"
+    "df = pd.read_csv(crm_file_name)\n",
+    "deal_mapping_df = pd.read_csv(deal_stage_mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert columns to lower case\n",
+    "df.columns = df.columns.str.lower()\n",
+    "deal_mapping_df.columns = deal_mapping_df.columns.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge Dataframes\n",
+    "df = df.merge(deal_mapping_df, how=\"left\", on=\"deal_stage\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +271,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>age_in_days</th>\n      <th>next_reach_out_date</th>\n      <th>number_of_outlets</th>\n      <th>created_at_len</th>\n      <th>created_at_2_len</th>\n      <th>updated_at_len</th>\n      <th>updated_at_2_len</th>\n      <th>next_reach_out_date_len</th>\n      <th>next_reach_out_date_2_len</th>\n      <th>created_at_2_year</th>\n      <th>created_at_2_month</th>\n      <th>created_at_2_day</th>\n      <th>updated_at_2_year</th>\n      <th>updated_at_2_month</th>\n      <th>updated_at_2_day</th>\n      <th>next_reach_out_date_2_year</th>\n      <th>next_reach_out_date_2_month</th>\n      <th>next_reach_out_date_2_day</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>5.863000e+03</td>\n      <td>5863.000000</td>\n      <td>185.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.0</td>\n      <td>5863.000000</td>\n      <td>5863.0</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>5863.00000</td>\n      <td>5863.000000</td>\n      <td>5863.000000</td>\n      <td>185.000000</td>\n      <td>185.000000</td>\n      <td>185.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>2.003714e+09</td>\n      <td>350.491557</td>\n      <td>44355.108108</td>\n      <td>104.600887</td>\n      <td>16.457957</td>\n      <td>19.0</td>\n      <td>16.413781</td>\n      <td>19.0</td>\n      <td>3.126215</td>\n      <td>3.220877</td>\n      <td>2019.190517</td>\n      <td>7.542555</td>\n      <td>15.227870</td>\n      <td>2020.37080</td>\n      <td>5.477912</td>\n      <td>13.761044</td>\n      <td>2021.016216</td>\n      <td>5.600000</td>\n      <td>14.400000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1.024682e+06</td>\n      <td>329.953288</td>\n      <td>88.841941</td>\n      <td>7416.533507</td>\n      <td>1.846802</td>\n      <td>0.0</td>\n      <td>1.884781</td>\n      <td>0.0</td>\n      <td>0.699295</td>\n      <td>1.223767</td>\n      <td>0.880839</td>\n      <td>3.816213</td>\n      <td>9.408011</td>\n      <td>0.63044</td>\n      <td>3.999038</td>\n      <td>7.700689</td>\n      <td>0.126649</td>\n      <td>2.592212</td>\n      <td>7.676333</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>2.001614e+09</td>\n      <td>-1192.000000</td>\n      <td>44209.000000</td>\n      <td>1.000000</td>\n      <td>13.000000</td>\n      <td>19.0</td>\n      <td>13.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2017.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>2018.00000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>2021.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>2.002778e+09</td>\n      <td>91.500000</td>\n      <td>44293.000000</td>\n      <td>1.000000</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2018.000000</td>\n      <td>4.000000</td>\n      <td>7.000000</td>\n      <td>2020.00000</td>\n      <td>2.000000</td>\n      <td>9.000000</td>\n      <td>2021.000000</td>\n      <td>4.000000</td>\n      <td>8.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2.003950e+09</td>\n      <td>248.000000</td>\n      <td>44328.000000</td>\n      <td>3.000000</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>16.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2019.000000</td>\n      <td>8.000000</td>\n      <td>15.000000</td>\n      <td>2020.00000</td>\n      <td>3.000000</td>\n      <td>14.000000</td>\n      <td>2021.000000</td>\n      <td>5.000000</td>\n      <td>13.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>2.004686e+09</td>\n      <td>509.000000</td>\n      <td>44419.000000</td>\n      <td>8.000000</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>18.000000</td>\n      <td>19.0</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>2020.000000</td>\n      <td>11.000000</td>\n      <td>24.000000</td>\n      <td>2021.00000</td>\n      <td>9.000000</td>\n      <td>18.000000</td>\n      <td>2021.000000</td>\n      <td>8.000000</td>\n      <td>20.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>2.005079e+09</td>\n      <td>1173.000000</td>\n      <td>44882.000000</td>\n      <td>567890.000000</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>19.000000</td>\n      <td>19.0</td>\n      <td>7.000000</td>\n      <td>10.000000</td>\n      <td>2021.000000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n      <td>2021.00000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n      <td>2022.000000</td>\n      <td>12.000000</td>\n      <td>31.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 30
     }
    ],
    "source": [
@@ -258,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Execution Time: 11.6983802318573 secs\n"
+      "Execution Time: 321.20055770874023 secs\n"
      ]
     }
    ],
@@ -284,28 +307,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Categorical Variables\r\n",
-    "df.loc[df.source_of_the_deal.isna(), \"source_of_the_deal\"] = \"UNKNOWN\"\r\n",
-    "df.loc[df.head_office_city.isna(), \"head_office_city\"] = \"UNKNOWN\""
+    "# Categorical Variables\n",
+    "df.loc[df.source_of_the_deal.isna(), \"source_of_the_deal\"] = \"UNKNOWN\"\n",
+    "df.loc[df.head_office_city.isna(), \"head_office_city\"] = \"UNKNOWN\"\n",
+    "df.loc[df.owner.isna(), \"owner\"] = \"UNKNOWN\""
    ]
   },
   {
    "source": [
-    "## Outlier Treatment"
+    "## Feature/KPI Generation\n",
+    "- Deals Handles Per Sales Rep - Overall\n",
+    "- Deals Won Per Sales Rep - Overall\n",
+    "- Deals Handles Per Sales Rep Per City\n",
+    "- Deals Won Per Sales Rep Per City\n",
+    "- "
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "## Feature Generation"
+    "continuous_list = [\n",
+    "    \"age_in_days\",\n",
+    "    \"number_of_outlets\",\n",
+    "    \"number_of_deals\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_list = [\n",
+    "    \"deal_stage\",\n",
+    "    \"deal_stage_2\",\n",
+    "    \"deal_stage_order\",\n",
+    "    \"restaurant_segment\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['id', 'owner', 'deal_stage', 'updated_at', 'created_at', 'age_in_days',\n",
+       "       'deferred_reason', 'not_interested_reasons', 'no_requirement_reasons',\n",
+       "       'next_reach_out_date', 'comments', 'source_of_the_deal',\n",
+       "       'head_office_city', 'country', 'number_of_outlets', 'deal_stage_2',\n",
+       "       'deal_stage_order', 'created_at_2', 'updated_at_2',\n",
+       "       'next_reach_out_date_2', 'created_at_len', 'created_at_2_len',\n",
+       "       'updated_at_len', 'updated_at_2_len', 'next_reach_out_date_len',\n",
+       "       'next_reach_out_date_2_len', 'created_at_2_year', 'created_at_2_month',\n",
+       "       'created_at_2_day', 'updated_at_2_year', 'updated_at_2_month',\n",
+       "       'updated_at_2_day', 'next_reach_out_date_2_year',\n",
+       "       'next_reach_out_date_2_month', 'next_reach_out_date_2_day'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Deferred                          2586\n",
+       "Lost                              1109\n",
+       "Won                               1033\n",
+       "Contact Made                       588\n",
+       "New Lead                           393\n",
+       "Negotiation                         45\n",
+       "Demo                                37\n",
+       "Proposal                            23\n",
+       "Dormant Dev Complete Partners?      16\n",
+       "POS Churned                          8\n",
+       "POS Integration Deferred             6\n",
+       "Onboarding Merchants                 6\n",
+       "Product Development                  5\n",
+       "Signed up for integration            4\n",
+       "Development Complete                 3\n",
+       "Agreement Sent                       1\n",
+       "Name: deal_stage_2, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "df.deal_stage_2.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "8     2590\n",
+       "7     2142\n",
+       "2      588\n",
+       "1      393\n",
+       "5       45\n",
+       "3       37\n",
+       "4       23\n",
+       "9       17\n",
+       "?       16\n",
+       "11       8\n",
+       "10       3\n",
+       "6        1\n",
+       "Name: deal_stage_order, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "df.deal_stage_order.value_counts()"
+   ]
   },
   {
    "source": [
